Add admin user management endpoints