@@ -1,34 +1,44 @@
 package ca.sheridancollege.bakerdam.authsystemapi.security;
 
+import ca.sheridancollege.bakerdam.authsystemapi.dto.response.ErrorResponse;
 import ca.sheridancollege.bakerdam.authsystemapi.repository.UserRepository;
 import io.jsonwebtoken.JwtException;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import lombok.NonNull;
+import org.springframework.http.HttpStatus;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
+import tools.jackson.databind.ObjectMapper;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.time.LocalDateTime;
+import java.util.List;
 
 @Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
     private final JwtService jwtService;
     private final UserRepository userRepository;
+    private final ObjectMapper objectMapper;
 
-    public JwtAuthenticationFilter(JwtService jwtService, UserRepository userRepository) {
+    public JwtAuthenticationFilter(JwtService jwtService,
+                                   UserRepository userRepository,
+                                   ObjectMapper objectMapper) {
         this.jwtService = jwtService;
         this.userRepository = userRepository;
+        this.objectMapper = objectMapper;
     }
 
     @Override
-    protected void doFilterInternal(HttpServletRequest request,
-                                    HttpServletResponse response,
-                                    FilterChain filterChain) throws ServletException, IOException {
+    protected void doFilterInternal(@NonNull HttpServletRequest request,
+                                    @NonNull HttpServletResponse response,
+                                    @NonNull FilterChain filterChain) throws ServletException, IOException {
         String authHeader = request.getHeader("Authorization");
 
         if (authHeader == null || !authHeader.startsWith("Bearer ")) {
@@ -41,28 +51,35 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
         try {
             String email = jwtService.extractEmail(token);
 
-            // Security context holder holds information on whether someone in the current request
-            // is already authenticated or not
             if (email != null && SecurityContextHolder.getContext().getAuthentication() == null) {
                 userRepository.findByEmail(email).ifPresent(user -> {
                     if (jwtService.isTokenValid(token, user.getEmail())) {
                         UsernamePasswordAuthenticationToken authenticationToken =
                                 new UsernamePasswordAuthenticationToken(
-                                        user.getEmail(), // Principal
-                                        null, // Credentials (null in JWT auth)
-                                        Collections.emptyList() // Roles
+                                        user.getEmail(),
+                                        null,
+                                        List.of(new SimpleGrantedAuthority(user.getRole().name()))
                                 );
-                        authenticationToken.setDetails( // Adds extra request details to authentication object
+                        authenticationToken.setDetails(
                                 new WebAuthenticationDetailsSource().buildDetails(request)
                         );
-                        SecurityContextHolder.getContext().setAuthentication(authenticationToken); // Set auth object for current request
+                        SecurityContextHolder.getContext().setAuthentication(authenticationToken);
                     }
                 });
             }
         } catch (JwtException | IllegalArgumentException ex) {
-            response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+            ErrorResponse error = new ErrorResponse(
+                    LocalDateTime.now(),
+                    HttpStatus.UNAUTHORIZED.value(),
+                    HttpStatus.UNAUTHORIZED.getReasonPhrase(),
+                    "Invalid or expired token",
+                    request.getRequestURI(),
+                    null
+            );
+
+            response.setStatus(HttpStatus.UNAUTHORIZED.value());
             response.setContentType("application/json");
-            response.getWriter().write("{\"error\":\"Invalid or expired token\"}");
+            objectMapper.writeValue(response.getWriter(), error);
             return;
         }
 
